# dash

./: .env.example  .gitignore  .prettierignore  README.md  TODO.md  docker-compose.prod.yml  eslint.config.js  master.md  package-lock.json  package.json  project-context.md  pyproject.toml  rules.md  task_progress.txt  tasks.md  test.db  tsconfig.base.json
apps/backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  check_db.py  check_users.py  migrations.sql  migrations_0003.sql  migrations_0004.sql  pyproject.toml  requirements.txt  test.db  test_auth.py  test_auth2.py  test_auth3.py  test_create.py  test_debug.py
apps/backend/alembic/: README_MIGRATION_FIX_is_archived.md  env.py
apps/backend/alembic/versions/: 064dcb41eb02_sync_models.py  0da4a72df6bb_merge_heads.py  111b1f187000_sync_models.py  20260714_0001_auth_tables.py  20260715_0002_add_server_defaults.py  20260716_0003_conversation_memory.py  20260716_0004_add_is_archived_to_conversations.py  20260716_0005_add_memory_category.py  20260717_0001_add_rag_documents.py  20260717_0002_add_automations.py  20260717_0003_add_agents.py  20260717_0004_add_executive_tables.py  20260717_0004_update_execution_columns.py  20260717_0005_add_executive_fks.py  20260717_0006_add_task_claims.py  6164c36f46ee_sync_models.py  __init__.py
apps/backend/dash_backend/: README_EXECUTIVE.md  __init__.py  config.py  logging_config.py  main.py  personal.py  voice.py
apps/backend/dash_backend/agents/: models.py  registry.py  router.py  schemas.py  service.py
apps/backend/tests/: conftest.py  test_agents_service.py  test_auth.py  test_automation_service_persist.py  test_conversations.py  test_filesystem_service.py  test_health.py  test_memory.py  test_scheduler.py  test_skills.py  test_websocket.py
(+239 files in other folders)
