[project]
name = "dash-workspace"
version = "0.1.0"
description = "DASH monorepo Python workspace tooling"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["apps/backend", "packages", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["dash_backend", "dash_ai_core", "dash_agents", "dash_automation", "dash_memory", "dash_prompts", "dash_voice"]

[tool.pytest.ini_options]
testpaths = ["apps/backend/tests"]
asyncio_mode = "auto"
pythonpath = ["apps/backend", "packages", "."]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]
